--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <title>Über mich</title>
     <link rel="stylesheet" href="resume.css" />
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
 </head>
+
 <body>
-    <!--
-    <script src="http://fb.me/react-0.12.2.min.js"></script>
-    <script src="http://fb.me/JSXTransformer-0.12.2.js"></script>
-    -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     <script src="bundle.js"></script>
-    
+
     <div id="container"></div>
 </body>
+
 </html>
