--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,12 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Über mich</title>
+    <title>www.ender74.de - Meine private Homepage</title>
     <link rel="stylesheet" href="resume.css" />
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <link rel="stylesheet" href="leaflet/leaflet.css" />
 </head>
 
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
     <script src="bundle.js"></script>
 
     <div id="container"></div>
