--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+<!--    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+-->    
+    
     <script src="bundle.js"></script>
 
     <div id="container"></div>
