--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,7 +17,7 @@
     <script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
 -->    
     
-    <script src="bundle.js"></script>
+    <script src="build.min.js"></script>
 
     <div id="container"></div>
 </body>
